<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Cancel" >

    <Button
        android:id="@+id/file4down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/file4up"
        android:layout_alignRight="@+id/file4up"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="46dp"
        android:onClick="CancelUpdate"
        android:text="@string/cancel_yes" />

    <Button
        android:id="@+id/file4up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/file4down"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="39dp"
        android:onClick="Continue"
        android:text="@string/cancel_no" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="49dp"
        android:text="@string/cancel"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>