<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.42" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath1"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file1down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file1up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath2"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file2down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file2up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath3"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file3down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file3up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath4"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file4down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file4up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath5"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file5down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file5up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath6"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file6down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file6up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath7"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file7down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file7up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath8"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file8down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file8up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath9"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file9down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file9up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="100" >

                <TextView
                    android:id="@+id/filepath10"
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="12"
                    android:gravity="center" />

                <Button
                    android:id="@+id/file10down"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↓"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/file10up"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="44"
                    android:text="↑"
                    android:visibility="invisible" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/wipe_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_WipeCache" />

    <CheckBox
        android:id="@+id/wipe_dalvik_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_WipeDalvik" />

    <CheckBox
        android:id="@+id/create_backup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pref_backup" />

</LinearLayout>